<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/menu_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:textColor="#000000"
            android:text="@string/MyShop" />

        <CheckBox
            android:id="@+id/all_check"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"/>

    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="#000000" >
    </ListView>

    <LinearLayout
        android:id="@+id/price_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" >

            <!-- 商品总价提示 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="#000000"
                android:text="@string/shopTotalPrice" />
            <!-- 选中商品的总金额 -->

            <TextView
                android:id="@+id/shopTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:textColor="#000000"
                android:text="@string/delete" />

            <TextView
                android:id="@+id/collection"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/delete"
                android:drawableTop="@drawable/collection"
                android:textColor="#000000"
                android:text="@string/collection" />

            <TextView
                android:id="@+id/checkOut"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:textColor="#000000"
                android:text="@string/checkOut" />
        </RelativeLayout>
    </LinearLayout>

    
</LinearLayout>