<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/menu_bg">
    	 <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp" 
        android:background="#ff04aeda"> 
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="开桌点餐"
            android:textSize="21sp"
            android:textColor="#ffffffff"/>

    </RelativeLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/startButton02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#1E88E5"
        android:text="@string/myShop" />


        <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/hotmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
           android:background="#1E88E5"
            android:layout_weight="1"
        android:text="推荐菜品" />



    </LinearLayout>
    
    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1-6号桌为4人桌，7-12号桌为8人桌，13到18号桌为10人桌"
        android:textColor="#ffffff" />
    <TextView
        android:id="@+id/TextView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="桌号:"
        android:textColor="#ffffff" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
 
       <Spinner
            android:id="@+id/tableNoSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            >
        </Spinner>
        
        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="桌号:"
            android:textColor="#ffffff" />

        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="人数:"
            android:textColor="#ffffff" >
        </TextView>

        <EditText
            android:id="@+id/personNumEditText02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="" >
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:text="@string/MyShop" />

        <CheckBox
            android:id="@+id/all_check"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"/>
    </LinearLayout>

    <ListView
        android:id="@+id/main_listView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="#FF0000" >
    </ListView>

    <LinearLayout
        android:id="@+id/price_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" >

            <!-- 商品总价提示 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/shopTotalPrice" />
            <!-- 选中商品的总金额 -->

            <TextView
                android:id="@+id/shopTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:text="@string/delete" />

            <TextView
                android:id="@+id/collection"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/delete"
                android:drawableTop="@drawable/collection"
                android:text="@string/collection" />

            <TextView
                android:id="@+id/checkOut"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/checkOut" />
        </RelativeLayout>
    </LinearLayout>

    
</LinearLayout>